src/app.css
/* ... */
img,
a {
  -webkit-user-drag: none;
}

#episodeListTarget:fullscreen,
#episodeListTarget.custom-fullscreen {
  user-select: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
}

body:has(.custom-fullscreen)> :not(:has(.custom-fullscreen), .custom-fullscreen) {
  display: none;
}

:root:not(:has(:fullscreen)):not(:has(.custom-fullscreen)) #root {
  padding-top: env(safe-area-inset-top, unset);
  padding-bottom: env(safe-area-inset-bottom, unset);
}

@keyframes load-in {
  from {
    transform: translate3d(0, 1.2rem, 0) scale(0.95);
  }

  to {
    transform: none
  }
}

@keyframes hearbeat {
  from {
    transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(1) scaleY(1);
  }

  to {
    transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(0.85) scaleY(0.85);
  }
}

.custom-bg {
  /* this is very hacky, but removes jagged edges */
  background: repeating-linear-gradient(40deg, hsla(from var(--border, #111) h s l / 0.27) 0, hsla(from var(--border, #555) h s l / 0.33) 1px, hsla(from var(--border, #555) h s l / 0.33) 5px, hsla(from var(--border, #111) h s l / 0.07) 6px, hsla(from var(--popover, #111) h s l / 0.07) 10px);
  /* repeating-linear-gradient(40deg, #5554 0 5px, #1114 0 10px); */
}

*:focus-visible,
[data-input='dpad'] *:focus {
  outline: none;
  border-image: fill 0 linear-gradient(hsla(from var(--border, #888) h s l / 0.53), hsla(from var(--border, #888) h s l / 0.53));
}

*::-webkit-scrollbar {
  display: none;
}

.details span+span::before {
  content: '•';
  padding: 0 .3rem;
  font-size: .4rem;
  align-self: center;
  white-space: normal;
  color: #737373 !important;
}

a[href],
button,
fieldset,
input,
optgroup,
option,
select,
textarea,
details,
[tabindex],
[contenteditable] {
  &:active:not([disabled], [type='range'], .no-scale, [tabindex="-1"]) {
    transition: all 0.1s ease-in-out;
    transform: scale(0.98);
  }
}

.scale-parent:has(.no-scale:active) {
  transition: all 0.1s ease-in-out;
  transform: scale(0.98);
}

.overflow-y-scroll,
.overflow-y-auto,
.overflow-x-scroll,
.overflow-x-auto,
.overflow-auto,
.overflow-scroll {
  will-change: scroll-position;
}

.bg-url {
  background-image: var(--bg);
}


.sr-only {
  display: none !important;
}

.flex-wrap-balance {
  flex-wrap: wrap;
  flex-wrap: balance;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.text-contrast-filter {
  filter: invert(1) grayscale(1) brightness(1.2) contrast(9000);
  mix-blend-mode: luminosity;
  -webkit-font-smoothing: antialiased;
  background-color: inherit;
  background-clip: text;
  color: transparent
}

.svelte-keybinds {
  background: black !important;
}

.svelte-progress-bar {
  height: 2px !important;
}

.svelte-progress-bar-leader {
  height: 4px !important;
}

.text-shadow-lg {
  text-shadow: 0px 1px 2px var(--tw-text-shadow-color, #0000001a), 0px 3px 2px var(--tw-text-shadow-color, #0000001a), 0px 4px 8px var(--tw-text-shadow-color, #0000001a);
}

.fade-in {
  animation: fade-in ease .8s;
}

/* animated SVG icons */
.animated-icon:not(:hover):not(:focus-visible):not(:active) .target-animated-icon {
  animation: none !important;
  transform: translateX(0) translateX(0) translateZ(0) translate(0, 0) rotate(0) !important;
}

/* Backplate related things */

/* body {
  perspective: 3000px;
}

#root:has(+ .backplate-spin) {
  animation: idle-spin 120s linear infinite;
}

.backplate-spin {
  animation: idle-spin-y-flip 120s linear infinite;
}


#root:has(+ .backplate-fly) {
  animation: idle-fly 0.8s forwards cubic-bezier(0.22, 1, 0.36, 1);
}

#root {
  transition: transform 0.5s;
  transform: perspective(100vw) translate3d(0, 0, 0vw) rotateY(0deg) rotateX(0deg);
}*/

::view-transition-old(my-root),
::view-transition-new(my-root) {
  animation-duration: 200ms;
  animation-timing-function: ease-in-out;
}

::view-transition-old(my-root) {
  animation-name: fade-out;
}

::view-transition-new(my-root) {
  animation-name: fade-in;
}

@media (prefers-reduced-motion) {

  ::view-transition-group(*),
  ::view-transition-old(*),
  ::view-transition-new(*) {
    animation: none !important;
  }
}

/* @media (max-width: 768px) {

  ::view-transition-old(*),
  ::view-transition-new(*) {
    animation-duration: 600ms !important;
    animation-timing-function: cubic-bezier(0.22, 1, 0.36, 1) !important;
  }

  ::view-transition-old(*) {
    animation-name: slide-out-left !important;
  }

  ::view-transition-new(*) {
    animation-name: slide-in-right !important;
  }
} */

/* @keyframes slide-in-right {
  from {
    transform: translateX(40%);
  }

  to {
    transform: translateX(0);
  }
}

@keyframes slide-out-left {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-10%);
  }
} */

@keyframes fade-out {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

@keyframes fade-in {
  from {
    opacity: 0;
  }

  to {
    opacity: 1
  }
}


@keyframes idle-fly {
  0% {
    transform: perspective(100vw) translate3d(0, 0, 0vw) rotateY(0deg) rotateX(0deg);
  }

  100% {
    transform: perspective(100vw) translate3d(0, 0, -66vw) rotateY(0deg) rotateX(-15deg);
  }
}

@keyframes idle-spin {
  0% {
    transform: perspective(100vw) translate3d(0, 0, -66vw) rotateY(0deg) rotateX(-15deg);
  }

  50% {
    transform: perspective(100vw) translate3d(0, 0, -66vw) rotateY(180deg) rotateX(15deg);
  }

  100% {
    transform: perspective(100vw) translate3d(0, 0, -66vw) rotateY(360deg) rotateX(-15deg);
  }
}
/* ... */

